examples/test/testpolicy8085.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8085
  namespace: namespace304
spec:
  podSelector:
    matchLabels:
      key26: value39
      key23: value17
      key21: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value25
          key31: value18
          key9: value29
      podSelector:
        matchLabels:
          key7: value5
          key33: value30
          key4: value7
